--- a/app/src/main/res/layout/product_page.xml
+++ b/app/src/main/res/layout/product_page.xml
@@ -12,7 +12,7 @@
 <LinearLayout
     android:layout_width="fill_parent"
     android:orientation="vertical"
-    android:background="@drawable/gridview_bg"
+    android:background="@color/white"
     android:layout_height="fill_parent">
 
     <LinearLayout
