--- a/app/src/main/res/layout/activity_details_view.xml
+++ b/app/src/main/res/layout/activity_details_view.xml
@@ -6,7 +6,7 @@
     android:background="#000"
     android:orientation="vertical">
 
-    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
+    <ImageView
         android:id="@+id/grid_item_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
