--- a/app/src/main/res/layout/entrylayout.xml
+++ b/app/src/main/res/layout/entrylayout.xml
@@ -35,10 +35,11 @@
         android:layout_gravity="center" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="250dp"
+            android:layout_height="52dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_marginBottom="@dimen/space_40"
+            android:layout_marginTop="70dp"
+            android:gravity="center"
             android:textColor="@color/white"
             android:text="@string/skip_login"
             android:id="@+id/skip_login"
