--- a/app/src/main/res/layout/button_test.xml
+++ b/app/src/main/res/layout/button_test.xml
@@ -62,20 +62,25 @@
 
             <RelativeLayout
                 android:id="@+id/navigation_drawer_account_information"
-                android:layout_width="wrap_content"
+                android:layout_width="320dp"
                 android:layout_height="@dimen/navigation_drawer_account_information_height"
                 android:layout_alignParentBottom="true"
                 android:gravity="center_vertical"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_alignParentEnd="true">
 
                 <TextView
                     android:id="@+id/username"
                     android:layout_marginLeft="@dimen/space_2"
-                    style="@style/NavDrawerAccountInfoText"
-                    android:paddingLeft="@dimen/space_70"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:gravity="center"
+                    android:textSize="@dimen/text_size_14"
                     android:paddingTop="@dimen/space_2"
-                    android:text="@string/tools_text_account_information_username"
-                    tools:fontFamily="sans-serif-medium"/>
+                    android:text=""
+                    android:textColor="@color/white"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true" />
                 <TextView
                     android:id="@+id/email_txt"
                     android:layout_width="wrap_content"
@@ -83,9 +88,9 @@
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
                     android:textColor="@color/white"
-                    android:text="ssssss@ddddd,fff"
+                    android:text=""
                     android:layout_centerVertical="true"
-                    android:layout_alignStart="@+id/username" />
+                    android:layout_centerHorizontal="true" />
 
                 <TextView
                     android:id="@+id/city_txt"
@@ -95,10 +100,20 @@
                     android:textColor="@color/white"
                     android:text="Dubai"
                     android:layout_alignParentBottom="true"
-                    android:layout_alignStart="@+id/username">
+                    android:layout_alignStart="@+id/email_txt">
                 </TextView>
 
-
+                <TextView
+                    android:id="@+id/phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@color/white"
+                    android:text=""
+                    android:layout_marginLeft="@dimen/space_8"
+                    android:layout_alignTop="@+id/city_txt"
+                    android:layout_alignEnd="@+id/email_txt">
+                </TextView>
             </RelativeLayout>
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -108,20 +123,10 @@
                 android:layout_height="@dimen/navigation_drawer_profile_image_size"
                 android:src="@drawable/ic_account_circle_white_64dp"
                 android:layout_above="@+id/navigation_drawer_account_information"
-                android:layout_alignEnd="@+id/navigation_drawer_account_information" />
+                android:layout_alignEnd="@+id/navigation_drawer_account_information"
+                android:layout_marginEnd="125dp" />
 
-            <TextView
-                android:id="@+id/phone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textColor="@color/white"
-                android:text="123456789"
-                android:layout_marginLeft="@dimen/space_12"
-                android:layout_alignBottom="@+id/navigation_drawer_account_information"
-                android:layout_toEndOf="@+id/navigation_drawer_account_information"
-                android:layout_marginBottom="39dp">
-            </TextView>
+
 
         </RelativeLayout>
 
@@ -144,60 +149,12 @@
                 android:id="@+id/list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
-       <!--     <TextView
-                android:id="@+id/city"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/city_txt"
-                android:layout_marginLeft="100dp"
-                android:layout_toRightOf="@+id/city_txt"
-                android:textSize="16sp"
-                android:text="" >
-            </TextView>
-            <TextView
-                android:id="@+id/my_order"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:drawableLeft="@drawable/my_orders_icon"
-                android:drawablePadding="@dimen/space_4"
-                android:layout_below="@+id/textView1"
-                android:textColor="@color/text_color"
-                android:layout_marginTop="184dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/my_orders_small"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-            <TextView
-                android:id="@+id/tc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:drawableLeft="@drawable/terms_icon"
-                android:layout_below="@+id/textView1"
-                android:drawablePadding="@dimen/space_4"
-                android:textColor="@color/text_color"
-                android:layout_marginTop="220dp"
-                android:layout_marginLeft="9dp"
-                android:text="@string/terms_and_condition"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-            <TextView
-                android:id="@+id/policy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawablePadding="@dimen/space_4"
-                android:layout_marginTop="254dip"
-                android:layout_marginLeft="@dimen/space_11"
-                android:text="@string/privacy_policy"
-                android:drawableLeft="@drawable/privacy_icon"
-                android:textAlignment="center"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/text_color" />-->
 
         </RelativeLayout>
 
     </LinearLayout>
 
-   <android.support.design.widget.FloatingActionButton
+<android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
