--- a/app/src/main/res/layout/payment_page.xml
+++ b/app/src/main/res/layout/payment_page.xml
@@ -103,7 +103,7 @@
             android:layout_alignBottom="@+id/name"
             android:layout_marginLeft="85dp"
             android:layout_toRightOf="@+id/name"
-            android:hint="$$$" >
+            android:hint="0" >
         </TextView>
 
         <TextView
@@ -112,7 +112,7 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/name"
             android:layout_below="@+id/name"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:text="@string/merchandise_total"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -131,7 +131,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textView1"
-            android:layout_marginTop="115dp"
+            android:layout_marginTop="90dp"
             android:layout_marginLeft="10dp"
             android:text="@string/discount"
             android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -143,7 +143,7 @@
             android:layout_alignBottom="@+id/phone"
             android:layout_marginLeft="105dp"
             android:layout_toRightOf="@+id/phone"
-            android:text="$$$" >
+            android:text="0" >
         </TextView>
 
         <TextView
@@ -152,7 +152,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textView1"
-            android:layout_marginTop="145dp"
+            android:layout_marginTop="120dp"
             android:layout_marginLeft="10dp"
             android:text="@string/shipping"
             android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -173,7 +173,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textView1"
-            android:layout_marginTop="175dp"
+            android:layout_marginTop="150dp"
             android:layout_marginLeft="10dp"
             android:text="@string/tax"
             android:textAppearance="?android:attr/textAppearanceMedium" />
