--- a/app/src/main/res/layout/designer_listview.xml
+++ b/app/src/main/res/layout/designer_listview.xml
@@ -14,16 +14,16 @@
 
         <RelativeLayout
             android:background="@drawable/designer_circle_icon"
-            android:layout_width="142dp"
-            android:layout_height="128dp"
+            android:layout_width="118dp"
+            android:layout_height="111dp"
             android:layout_marginLeft="@dimen/space_25"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imageView"
-                android:layout_width="106dp"
-                android:layout_height="101dp"
+                android:layout_width="94dp"
+                android:layout_height="86dp"
                 android:layout_marginBottom="@dimen/space_13"
                 android:src="@drawable/circular_image_icon"
                 android:layout_gravity="center"
@@ -59,14 +59,14 @@
                 android:textSize="14dp"
                 android:layout_gravity="center_horizontal" />
 
-            <TextView
+            <!--<TextView
                 android:id="@+id/text3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="33333"
                 android:layout_marginTop="@dimen/space_2"
                 android:textSize="14dp"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal" />-->
 
             <TextView
                 android:id="@+id/text4"
