--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -45,7 +45,7 @@
             android:orientation="vertical">
 
 
-            <RelativeLayout
+           <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_25">
@@ -53,18 +53,18 @@
 
                 <android.support.v4.view.ViewPager
                     android:id="@+id/pager"
-                    android:layout_width="385dp"
+                    android:layout_width="match_parent"
                     android:layout_height="174dp"
                     android:layout_alignParentTop="true"
-                    android:paddingLeft="@dimen/space_8"
-                    android:paddingRight="@dimen/space_8" />
+                    android:paddingLeft="@dimen/space_15"
+                    android:paddingRight="@dimen/space_15" />
 
                 <com.viewpagerindicator.CirclePageIndicator
                     android:id="@+id/indicator"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="125dp"
+                    android:layout_marginTop="135dp"
                     android:padding="10dip"
                     app:centered="true"
                     app:fillColor="#ff0099"
@@ -85,12 +85,12 @@
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
-                    android:paddingLeft="@dimen/space_10"
-                    android:text="@string/browse_by_category"
+                    android:paddingLeft="@dimen/space_20"
+                    android:text="@string/featured_product"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
 
-                <TextView
+              <!--  <TextView
                     android:id="@+id/see_all"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
@@ -99,21 +99,21 @@
                     android:paddingRight="@dimen/space_8"
                     android:text="@string/see_all"
                     android:textColor="@color/black"
-                    android:textSize="18sp" />
+                    android:textSize="18sp" />-->
             </FrameLayout>
 
             <com.slidingimages.ExpandableHeightGridView
                 android:id="@+id/gridView"
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
+                android:layout_height="wrap_content"
                 android:clickable="false"
                 android:columnWidth="190dp"
                 android:focusable="false"
                 android:gravity="center"
                 android:horizontalSpacing="20dp"
                 android:numColumns="2"
-                android:paddingLeft="@dimen/space_8"
-                android:paddingRight="@dimen/space_8"
+                android:paddingLeft="@dimen/space_15"
+                android:paddingRight="@dimen/space_15"
                 android:stretchMode="columnWidth"
                 android:verticalSpacing="10dp">
 
@@ -133,7 +133,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="@android:color/white" />
+            />
 
     </FrameLayout>
 
