--- a/app/src/main/res/layout/product_page.xml
+++ b/app/src/main/res/layout/product_page.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_activity_DrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,11 +8,7 @@
     tools:openDrawer="end"
     tools:context=".ProductPage">
 
-<LinearLayout
-    android:layout_width="fill_parent"
-    android:orientation="vertical"
-    android:background="@color/white"
-    android:layout_height="fill_parent">
+
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -37,8 +32,18 @@
                 android:src="@drawable/ic_drawer" />
         </android.support.v7.widget.Toolbar>
     </LinearLayout>
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:fillViewport="true">
 
     <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+    <FrameLayout
         android:id="@+id/lll"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
@@ -50,32 +55,35 @@
             android:gravity="center"
             android:text="@string/products"
             android:layout_marginBottom="@dimen/space_5"
-            android:layout_marginTop="@dimen/space_10"
+            android:layout_marginTop="@dimen/space_70"
             android:textColor="#a41c9a"
             android:textSize="22dp" />
-    </LinearLayout>
+    </FrameLayout>
 
 
 
-    <GridView
+    <com.slidingimages.ExpandableHeightGridView
         android:id="@+id/gridView"
         android:layout_width="wrap_content"
-        android:layout_height="393dip"
-        android:layout_marginTop="@dimen/space_10"
-        android:paddingRight="@dimen/space_10"
-        android:paddingLeft="@dimen/space_10"
+        android:layout_height="wrap_content"
+        android:paddingRight="@dimen/space_15"
+        android:paddingLeft="@dimen/space_15"
+        android:layout_marginBottom="@dimen/space_50"
         android:columnWidth="190dp"
+        android:clickable="false"
+        android:focusable="false"
         android:gravity="center"
-
         android:horizontalSpacing="20dp"
         android:numColumns="2"
         android:stretchMode="columnWidth"
         android:verticalSpacing="10dp">
 
-    </GridView>
+    </com.slidingimages.ExpandableHeightGridView>
+
+        </LinearLayout>
+    </ScrollView>
 
     <FrameLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/coordinator"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -88,13 +96,14 @@
         <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
+
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="@android:color/white" />
 
     </FrameLayout>
 
-</LinearLayout>
+
  <include
         layout="@layout/navigation_drawer"/>
 </android.support.v4.widget.DrawerLayout>
