--- a/app/src/main/res/layout/shipping_address_change.xml
+++ b/app/src/main/res/layout/shipping_address_change.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent">
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="50dp"
         android:gravity="center_horizontal"
         android:layout_marginTop="@dimen/space_5"
-        android:layout_marginBottom="@dimen/space_15"
+        android:layout_marginBottom="@dimen/space_1"
         android:id="@+id/welcome">
 
         <ImageView
@@ -46,14 +46,12 @@
 
             <TextView
                 android:id="@+id/name"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="10dp"
-                android:text="@string/slide_4_desc"
+                android:text="@string/shipping_note"
                 android:layout_marginTop="@dimen/space_5"
                 android:padding="10dp"
-                android:singleLine="true"
-                android:inputType="textCapWords"
                 android:textColor="@color/input_register"
                 android:textColorHint="@color/input_register_hint" />
 
@@ -77,8 +75,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:padding="10dp"
-                android:gravity="center"
-                android:layout_marginLeft="@dimen/space_110"
+                android:gravity="left"
+                android:layout_marginLeft="@dimen/space_20"
                 android:textSize="20sp"
                 android:text="@string/billing_address"
                 android:textColor="@color/text_color"
