--- a/app/src/main/res/layout/welcome_slide5.xml
+++ b/app/src/main/res/layout/welcome_slide5.xml
@@ -14,12 +14,12 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="195dp"
-            android:src="@drawable/intro_six" />
+            android:src="@drawable/intro_three" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/slide_3_title"
+            android:text="@string/slide_5_title"
             android:textColor="@android:color/white"
             android:textSize="@dimen/slide_title"
             android:textStyle="bold" />
@@ -30,7 +30,7 @@
             android:layout_marginTop="20dp"
             android:paddingLeft="@dimen/desc_padding"
             android:paddingRight="@dimen/desc_padding"
-            android:text="@string/slide_3_desc"
+            android:text="@string/slide_5_desc"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="@dimen/slide_desc" />
